# fpi

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  Dockerfile  README.md  alembic.ini  docker-compose.yaml  gh-wostal-secret.yaml  pyproject.toml
.hypothesis/examples/293f629e9953ef4b/: 5ed25f24c9303b2a
.hypothesis/examples/40ae3324e9e0b718/: e2c7a9b0a081c234
.hypothesis/examples/5b4ed4b93a8b5937/: 06c091188e0ffe21  3074c7e9a629a6ed  53db111b627ef5f0  67b66cca6031159f  8c2d4dfda163002b  a6523638199f2160  b231f0fcac00b015  f0c35e5540c66bec  fe52c1e287d0879c
.hypothesis/examples/adb258a84875f9bc/: 221bfee4093da6ca  cee285bf8a7328f8  f545de5563c58a5c
.hypothesis/examples/dcc3ee983e2a1e69/: 2082e4526a545c1c  7a44c3e58e9c2d4c  9c91c89f42018701  9d741facd72e71ff
charts/fpi/: Chart.yaml  temp.yaml  values.yaml
charts/fpi/templates/: NOTES.txt  _helpers.tpl  analysistemplate.yaml  hpa.yaml  ingress.yaml  postgres.yaml  rollout.yaml  service-canary.yaml  service-stable.yaml  serviceaccount.yaml  servicemonitor.yaml
charts/fpi/templates/tests/: test-connection.yaml
src/alembic/: env.py
src/fpi/: crud.py  database.py  main.py  models.py  schemas.py  version.py
tests/: test_crud.py  test_main.py
tests/k6/: loadtest.js
